--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -29,7 +29,7 @@ Prikazala bom nekaj podatkov o delovanju muzejev in razstavišč v različnih sl
 source("uvoz/uvoz.r", encoding = "UTF-8")
 ```
 
-Uvozili smo podatke o številu muzejev na 10.000 prebivalcev, o procentu občasnih razstav in povprečenm številu obiskovalcev v obliki CSV s statističnega urada. Podatki so zbrani v razpredelnicah; urejeni po letih in regijah. 
+Uvozili smo podatke o številu muzejev na 10.000 prebivalcev, o procentu občasnih razstav in povprečenm številu obiskovalcev v obliki CSV s statističnega urada. Podatki so zbrani v razpredelnicah; urejeni po letih in regijah. Podatke sem dobila na spletni strani Statističnega urada Republike Slovenije. 
 
 ```{r razpredelnice, fig.align='center'}
 kable(stevilomuzejev)
